Fix address bar on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,8 @@ html{
 }
 body{
   font-family:Arial, Helvetica, sans-serif;
-  background:url(../img/grass.jpg) no-repeat center center/cover;
-  position: relative;
+  background:url(../img/grass.jpg) no-repeat ;
+  position: fixed;
   height: 100vh;
   width: 100vw;
   overflow:hidden;
@@ -24,7 +24,7 @@ body{
 body::after{
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
